# libndtp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MANIFEST.in  Makefile  README.md  bindings.cpp  ndtp.cpp  pyproject.toml  requirements.txt  setup.py  test_libndtp.py  vcpkg.json
.github/workflows/: build-release.yaml  main.yml
cmake/: Config.cmake.in
include/libndtp/: Ndtp.hpp  Types.hpp
include/science/libndtp/: ndtp.h  ndtp.hpp  types.h  types.hpp  utils.h  utils.hpp  version.h.in  version.hpp.in
ops/: package.sh
src/: Ndtp.cpp  Types.cpp  Utilities.cpp
src/science/libndtp/: ndtp.cpp  types.cpp  utils.cpp
test/: test_ndtp.cpp  test_utils.cpp
