[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cmake>=3.20",
    "pybind11>=2.6.0",
    "grpcio-tools>=1.38.0",
    "scikit-build",
    "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "libndtp"
version = "0.1.0"
description = "A C++ extension for NDTP with Python bindings"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pybind11>=2.6.0",
    "grpcio-tools>=1.38.0",
    "protobuf>=3.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/libndtp"

[tool.setuptools]
# Additional setuptools configurations can go here
package-data = { "libndtp" = ["*.proto", "*.pb.cc", "*.pb.h"] }

[tool.setuptools.dynamic]
# Indicate which fields are defined dynamically in setup.py
# Remove 'classifiers' from here since we define it in 'project' above